# airline

./: DEPLOYMENT_GUIDE.md  EXPORT_FLIGHT_DATA_GUIDE.md  README.md  autorun.bat  autorun_bg.vbs  autorun_silent.vbs  deploy.sh  docker-compose.yml  stop.bat  stop.vbs
backend/: .dockerignore  .env.example  BATCH_FILE_PROCESSING_FLOW.md  Dockerfile  ExcelToSQL.ipynb  MSSQL_Airline.ipynb  README.md  UPLOAD_FILES_FLOW.md  flight-raw.sql  flight-update-raw.sql  flight-update.sql  flight.sql  main.py  pyproject.toml  query_export_to_excel.sql  requirements.txt  test_data_pipeline.py  vercel.json
backend/.choreo/: component.yaml
backend/core/: config.py  exception.py
backend/db/: database.py
backend/models/: actype_seat.py  airline_details.py  airline_ref.py  airline_route_details.py  airport_information.py  airport_ref.py  country_ref.py  dim_airline_ref.py  dim_airport_ref.py  dim_country_ref.py  dim_sector_route_dom_ref.py  error_table.py  flight_analyze.py  flight_clean_data_stg.py  flight_data_chot.py  flight_raw.py  import_log.py  missing_dimensions_log.py  qua_dem.py  region.py  route.py  seat_by_ac_type.py  sector_route_dom_ref.py  temp_actype_import.py  temp_route_import.py
backend/routes/: actype_seat.py  airline_ref.py  airport_ref.py  country_ref.py  data_processing.py  dim_airline_ref.py  dim_airport_ref.py  dim_country_ref.py  dim_sector_route_dom_ref.py  route.py  sector_route_dom_ref.py  temp_actype_import.py  temp_route_import.py
backend/schema/: __init__.py  actype_seat.py  airline_details.py  airline_ref.py  airline_route_details.py  airport_ref.py  (+19 more)
(+41 files in other folders)
