[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.35.0",
    "xlrd>=2.0.2",
]
